Add XHML MIME type

--- a/data/mime-types.conf
+++ b/data/mime-types.conf
@@ -7,8 +7,9 @@ mime_type["tgz"] = "application/x-gtar-compressed"
 
 mime_type["tar"] = "application/x-tar"
 
-mime_type["htm"]  = "text/html"
-mime_type["html"] = "text/html"
+mime_type["htm"]   = "text/html"
+mime_type["html"]  = "text/html"
+mime_type["xhtml"] = "application/xhtml+xml"
 
 mime_type["xml"] = "text/xml"
 
