Add CSV decomposer

--- a/data/mime-types.conf
+++ b/data/mime-types.conf
@@ -14,3 +14,6 @@ mime_type["xhtml"] = "application/xhtml+xml"
 mime_type["xml"] = "text/xml"
 
 mime_type["css"] = "text/css"
+
+mime_type["csv"] = "text/csv"
+mime_type["tsv"] = "text/tab-separated-values"
