configuration: add "s" to "mime_type"
mime_type["EXTENSION"] = "MIME type"
mime_types["EXTENSION"] = "MIME type"
         +

--- a/data/mime-types.conf
+++ b/data/mime-types.conf
@@ -1,19 +1,19 @@
 # -*- ruby -*-
 
-mime_type["txt"] = "text/plain"
+mime_types["txt"] = "text/plain"
 
-mime_type["gz"]  = "application/x-gzip"
-mime_type["tgz"] = "application/x-gtar-compressed"
+mime_types["gz"]  = "application/x-gzip"
+mime_types["tgz"] = "application/x-gtar-compressed"
 
-mime_type["tar"] = "application/x-tar"
+mime_types["tar"] = "application/x-tar"
 
-mime_type["htm"]   = "text/html"
-mime_type["html"]  = "text/html"
-mime_type["xhtml"] = "application/xhtml+xml"
+mime_types["htm"]   = "text/html"
+mime_types["html"]  = "text/html"
+mime_types["xhtml"] = "application/xhtml+xml"
 
-mime_type["xml"] = "text/xml"
+mime_types["xml"] = "text/xml"
 
-mime_type["css"] = "text/css"
+mime_types["css"] = "text/css"
 
-mime_type["csv"] = "text/csv"
-mime_type["tsv"] = "text/tab-separated-values"
+mime_types["csv"] = "text/csv"
+mime_types["tsv"] = "text/tab-separated-values"
