--- a/data/mime-types.conf
+++ b/data/mime-types.conf
@@ -17,3 +17,5 @@ mime_types["css"] = "text/css"
 
 mime_types["csv"] = "text/csv"
 mime_types["tsv"] = "text/tab-separated-values"
+
+mime_types["pdf"] = "application/pdf"
