Add MIME types for office files

--- a/data/mime-types.conf
+++ b/data/mime-types.conf
@@ -19,3 +19,18 @@ mime_types["csv"] = "text/csv"
 mime_types["tsv"] = "text/tab-separated-values"
 
 mime_types["pdf"] = "application/pdf"
+
+mime_types["odt"] = "application/vnd.oasis.opendocument.text"
+mime_types["ods"] = "application/vnd.oasis.opendocument.spreadsheet"
+mime_types["odp"] = "application/vnd.oasis.opendocument.presentation"
+
+mime_types["doc"] = "application/msword"
+mime_types["xls"] = "application/vnd.ms-excel"
+mime_types["ppt"] = "application/vnd.ms-powerpoint"
+
+mime_types["docx"] =
+  "application/vnd.openxmlformats-officedocument.wordprocessingml.document"
+mime_types["xlsx"] =
+  "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+mime_types["pptx"] =
+  "application/vnd.openxmlformats-officedocument.presentationml.presentation"
