--- a/data/mime-types.conf
+++ b/data/mime-types.conf
@@ -34,3 +34,6 @@ mime_types["xlsx"] =
   "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
 mime_types["pptx"] =
   "application/vnd.openxmlformats-officedocument.presentationml.presentation"
+
+mime_types["eml"] = "message/rfc822"
+mime_types["mew"] = "message/rfc822"
