--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 notifications:
-  recipients:
-    - groonga-commit@lists.sourceforge.jp
+  email:
+    recipients:
+      - groonga-commit@lists.osdn.me
 rvm:
-  - 1.9.3
-  - 2.0.0
-  - 2.1
   - 2.2
+  - 2.3.3
+  - 2.4.0
