--- a/data/mime-types.conf
+++ b/data/mime-types.conf
@@ -7,6 +7,8 @@ mime_types["tgz"] = "application/x-gtar-compressed"
 
 mime_types["tar"] = "application/x-tar"
 
+mime_types["zip"] = "application/zip"
+
 mime_types["htm"]   = "text/html"
 mime_types["html"]  = "text/html"
 mime_types["xhtml"] = "application/xhtml+xml"
